# scientific-pydantic

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
dev/: 404.html  gen_pages.py  index.html  objects.inv  sitemap.xml
dev/SUMMARY/: index.html
dev/api/scientific_pydantic/: index.html
dev/api/scientific_pydantic/astropy/: index.html
dev/api/scientific_pydantic/astropy/units/: index.html
dev/api/scientific_pydantic/numpy/: index.html
dev/api/scientific_pydantic/scipy/: index.html
dev/api/scientific_pydantic/scipy/spatial/: index.html
dev/api/scientific_pydantic/scipy/spatial/transform/: index.html
dev/api/scientific_pydantic/shapely/: index.html
dev/search/: search_index.json
src/scientific_pydantic/: __init__.py  range.py  slice.py  slice_syntax.py
src/scientific_pydantic/astropy/: __init__.py
src/scientific_pydantic/astropy/units/: physical_type.py  unit.py  validators.py
src/scientific_pydantic/numpy/: __init__.py  dtype_adapter.py  ndarray_adapter.py  validators.py
src/scientific_pydantic/scipy/spatial/transform/: rotation.py
src/scientific_pydantic/shapely/: __init__.py  adapters.py  adaptors.py
tests/: __init__.py  test_range.py  test_slice.py
tests/astropy/units/: test_unit.py
tests/numpy/: __init__.py  test_dtype.py  test_ndarray.py
tests/shapely/: test_adapters.py
