[project]
name = "scientific-pydantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Philip Salvaggio", email = "salvaggio.philip@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "astropy>=6.1.7",
    "numpy>=2.2.6",
    "prek>=0.2.25",
    "pyrefly>=0.46.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
    "scipy>=1.15.3",
    "shapely>=2.1.2",
]
